[gd_scene load_steps=23 format=3 uid="uid://dapbeuncd0cqp"]

[ext_resource type="Script" path="res://remi/ams/ams.gd" id="1_43nqk"]
[ext_resource type="Texture2D" uid="uid://dsgvpwpsowhli" path="res://remi/ams/assets/ADP adp.png" id="2_0e6hr"]
[ext_resource type="Texture2D" uid="uid://chb25w1bqscux" path="res://remi/lab/assets/Fond 2.png" id="2_tn8w8"]
[ext_resource type="Texture2D" uid="uid://drpga6qmb0pj5" path="res://remi/ams/assets/ADP ui.png" id="3_5vtsw"]
[ext_resource type="Texture2D" uid="uid://cs4u27yv65b88" path="res://remi/ams/assets/ADP feu.png" id="4_8ieqo"]
[ext_resource type="Texture2D" uid="uid://pvophqtht0m1" path="res://remi/ams/assets/ADP deriver ouvert.png" id="4_vcrmb"]
[ext_resource type="Texture2D" uid="uid://dsafvxfj5qulr" path="res://remi/ams/assets/ADP deriver hover.png" id="5_ak51g"]
[ext_resource type="Texture2D" uid="uid://d0ygkht5wm5e2" path="res://remi/ams/assets/ADP feu hover.png" id="5_jsrh5"]
[ext_resource type="Texture2D" uid="uid://bs2a5wo1btj8q" path="res://remi/ams/assets/ADP manivelle 2.png" id="6_45no1"]
[ext_resource type="Texture2D" uid="uid://1p2awpdm0las" path="res://remi/ams/assets/ADP deriver ferme.png" id="6_ocu3p"]
[ext_resource type="Texture2D" uid="uid://dv6rq1xbt5s0e" path="res://remi/ams/assets/ADP manivelle 1.png" id="6_up13t"]
[ext_resource type="FontFile" uid="uid://djhmic6riyixb" path="res://assets/MochiyPopPOne-Regular.ttf" id="12_woiae"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1syu"]
size = Vector2(1282, 424)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_783b0"]
size = Vector2(684, 602)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pespy"]
size = Vector2(73.5, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m4re4"]
size = Vector2(1284, 424)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0aguv"]
size = Vector2(781, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1cjpb"]
size = Vector2(119, 45)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyq5v"]
bg_color = Color(0.211765, 0.105882, 0.101961, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4aj8"]
bg_color = Color(0.654902, 0.329412, 0.317647, 1)
border_width_left = 6
border_width_top = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgvfy"]
bg_color = Color(0.121569, 0.168627, 0.211765, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhswx"]
bg_color = Color(0.517647, 0.701961, 0.847059, 1)
border_width_left = 6
border_width_top = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="AMS" type="Node"]
script = ExtResource("1_43nqk")

[node name="World" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="World"]
zoom = Vector2(0.61, 0.61)

[node name="UI" type="Node2D" parent="World"]

[node name="Background2" type="Sprite2D" parent="World/UI"]
texture = ExtResource("2_tn8w8")

[node name="AdpAdp" type="Sprite2D" parent="World/UI"]
position = Vector2(-12, -134)
texture = ExtResource("2_0e6hr")

[node name="AdpUi" type="Sprite2D" parent="World/UI"]
position = Vector2(-2, 394)
texture = ExtResource("3_5vtsw")

[node name="Boundaries" type="Area2D" parent="World"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Boundaries"]
position = Vector2(-445, -211)
shape = SubResource("RectangleShape2D_r1syu")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="World/Boundaries"]
position = Vector2(601, -122)
shape = SubResource("RectangleShape2D_783b0")

[node name="Obstacles" type="Area2D" parent="World"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Obstacles"]
position = Vector2(420.5, -272.5)
shape = SubResource("RectangleShape2D_pespy")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="World/Obstacles"]
position = Vector2(551, -272)
shape = SubResource("RectangleShape2D_pespy")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="World/Obstacles"]
position = Vector2(677, -272)
shape = SubResource("RectangleShape2D_pespy")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="World/Obstacles"]
position = Vector2(809, -272)
shape = SubResource("RectangleShape2D_pespy")

[node name="Source" type="Marker2D" parent="World"]
position = Vector2(-961, -61)

[node name="Source2" type="Marker2D" parent="World"]
position = Vector2(272, -336)

[node name="Accelerator" type="Area2D" parent="World"]
position = Vector2(-184, -118)
monitorable = false
gravity_space_override = 3
gravity_point_center = Vector2(1, 0)
gravity_direction = Vector2(1, 0)
gravity = 400.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Accelerator"]
position = Vector2(-260, -93)
shape = SubResource("RectangleShape2D_m4re4")

[node name="Deviator" type="Area2D" parent="World"]
position = Vector2(377, -70)
monitorable = false
gravity_space_override = 3
gravity_point_center = Vector2(1, 0)
gravity_direction = Vector2(1, 0)
gravity = 400.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Deviator"]
position = Vector2(174.5, -53)
shape = SubResource("RectangleShape2D_0aguv")

[node name="Target" type="Area2D" parent="World"]
position = Vector2(419, 315)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Target"]
position = Vector2(191.5, -194.5)
shape = SubResource("RectangleShape2D_1cjpb")

[node name="Target2" type="Area2D" parent="World"]
position = Vector2(27, -121)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Target2"]
position = Vector2(183, -193)
rotation = 1.5708
shape = SubResource("RectangleShape2D_1cjpb")

[node name="LauncherInput" type="Node2D" parent="World"]
position = Vector2(176, 405)

[node name="TextureButton" type="TextureButton" parent="World/LauncherInput"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -126.0
offset_right = 98.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
disabled = true
texture_normal = ExtResource("4_vcrmb")
texture_pressed = ExtResource("4_vcrmb")
texture_hover = ExtResource("5_ak51g")
texture_disabled = ExtResource("6_ocu3p")
texture_focused = ExtResource("4_vcrmb")
stretch_mode = 3

[node name="DeviatorInput" type="Node2D" parent="World"]
position = Vector2(357, 406)

[node name="TextureButton" type="TextureButton" parent="World/DeviatorInput"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_8ieqo")
texture_pressed = ExtResource("4_8ieqo")
texture_hover = ExtResource("5_jsrh5")
texture_focused = ExtResource("4_8ieqo")

[node name="ProgressBar2" type="Node2D" parent="World"]
position = Vector2(457, 406)

[node name="ProgressBar" type="ProgressBar" parent="World/ProgressBar2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -13.0
offset_right = 82.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
pivot_offset = Vector2(68, 13)
theme_override_styles/background = SubResource("StyleBoxFlat_eyq5v")
theme_override_styles/fill = SubResource("StyleBoxFlat_x4aj8")
show_percentage = false

[node name="AcceleratorInput" type="Node2D" parent="World"]
position = Vector2(-457, 405)

[node name="AdpManivelle1" type="Sprite2D" parent="World/AcceleratorInput"]
position = Vector2(2, 0.5)
texture = ExtResource("6_up13t")

[node name="Handle" type="Node2D" parent="World/AcceleratorInput"]
position = Vector2(0, 0.5)

[node name="TextureButton" type="TextureButton" parent="World/AcceleratorInput/Handle"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 95.0
offset_top = -34.0
offset_right = 164.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.56527
keep_pressed_outside = true
texture_normal = ExtResource("6_45no1")
texture_pressed = ExtResource("6_45no1")
texture_hover = ExtResource("6_45no1")
texture_focused = ExtResource("6_45no1")
stretch_mode = 3

[node name="ProgressBar" type="Node2D" parent="World"]
position = Vector2(-337, 406)

[node name="ProgressBar" type="ProgressBar" parent="World/ProgressBar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -13.0
offset_right = 66.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
pivot_offset = Vector2(68, 13)
theme_override_styles/background = SubResource("StyleBoxFlat_fgvfy")
theme_override_styles/fill = SubResource("StyleBoxFlat_rhswx")
show_percentage = false

[node name="Info" type="Node2D" parent="World"]
position = Vector2(1, -480)

[node name="Label" type="Label" parent="World/Info"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("12_woiae")
theme_override_font_sizes/font_size = 64
text = "Mesure du taux de Radiation"
horizontal_alignment = 1

[node name="Info2" type="Node2D" parent="World"]
position = Vector2(-412, 253)

[node name="Label" type="Label" parent="World/Info2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.0
offset_top = 11.0
offset_right = 304.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("12_woiae")
theme_override_font_sizes/font_size = 32
text = "Tourner la Dynamo"
horizontal_alignment = 1

[node name="Info3" type="Node2D" parent="World"]
position = Vector2(2, -15)

[node name="Label" type="Label" parent="World/Info3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.0
offset_top = 11.0
offset_right = 304.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("12_woiae")
theme_override_font_sizes/font_size = 32
text = "Dévier les Particules"
horizontal_alignment = 1

[node name="Info4" type="Node2D" parent="World"]
position = Vector2(656, 141)

[node name="Label" type="Label" parent="World/Info4"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.0
offset_top = 11.0
offset_right = 304.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("12_woiae")
theme_override_font_sizes/font_size = 32
text = "Viser le Capteur"
horizontal_alignment = 1

[node name="Info5" type="Node2D" parent="World"]
position = Vector2(402, 259)

[node name="Label" type="Label" parent="World/Info5"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.0
offset_top = 11.0
offset_right = 304.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("12_woiae")
theme_override_font_sizes/font_size = 32
text = "Impulsion"
horizontal_alignment = 1

[node name="Info6" type="Node2D" parent="World"]
position = Vector2(210, 258)

[node name="Label" type="Label" parent="World/Info6"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.0
offset_top = 11.0
offset_right = 304.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("12_woiae")
theme_override_font_sizes/font_size = 32
text = "Lacher"
horizontal_alignment = 1

[node name="Leds2" type="Node2D" parent="World"]

[node name="Polygon2D" type="Polygon2D" parent="World/Leds2"]
visible = false
position = Vector2(265, -89)
color = Color(0.8, 1, 0.8, 0.8)
polygon = PackedVector2Array(-19, 10, -19, -11, 2, -11, 19, -12, 18, 10, -8, 10)

[node name="Polygon2D2" type="Polygon2D" parent="World/Leds2"]
visible = false
position = Vector2(265, -116)
color = Color(0.8, 1, 0.8, 0.8)
polygon = PackedVector2Array(-19, 10, -19, -11, 2, -11, 19, -12, 18, 10, -8, 10)

[node name="Polygon2D3" type="Polygon2D" parent="World/Leds2"]
visible = false
position = Vector2(266, -142)
color = Color(0.8, 1, 0.8, 0.8)
polygon = PackedVector2Array(-19, 10, -19, -14, 2, -14, 16, -14, 17, 10, -8, 10)

[node name="Polygon2D4" type="Polygon2D" parent="World/Leds2"]
visible = false
position = Vector2(265, -165)
color = Color(0.8, 1, 0.8, 0.8)
polygon = PackedVector2Array(-18, 3, -19, -14, 2, -14, 16, -14, 16, 3, -3, 3)

[node name="Polygon2D5" type="Polygon2D" parent="World/Leds2"]
visible = false
position = Vector2(265, -188)
color = Color(0.8, 1, 0.8, 0.8)
polygon = PackedVector2Array(-18, 3, -19, -18, 1, -17, 17, -18, 16, 3, -3, 3)

[connection signal="body_exited" from="World/Boundaries" to="." method="_on_boundaries_body_exited"]
[connection signal="body_entered" from="World/Obstacles" to="." method="_on_obstacles_body_entered"]
[connection signal="body_entered" from="World/Target" to="." method="_on_target_body_entered"]
[connection signal="body_entered" from="World/Target2" to="." method="_on_target_2_body_entered"]
[connection signal="pressed" from="World/LauncherInput/TextureButton" to="." method="_on_launcher_input_pressed"]
[connection signal="pressed" from="World/DeviatorInput/TextureButton" to="." method="_on_deviator_input_pressed"]
[connection signal="button_down" from="World/AcceleratorInput/Handle/TextureButton" to="." method="_on_accelerator_input_button_down"]
[connection signal="button_up" from="World/AcceleratorInput/Handle/TextureButton" to="." method="_on_accelerator_input_button_up"]
